objects/OF_CQS_Ispezione__c.object
<CustomObject>
    <fields>
        <fullName>Autorizzazioni_ENEL_prossimit_E_Distrib__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>In caso di lavorazioni in prossimità di rete E-Distribuzione, è presente modulistica autorizzativa Enel</inlineHelpText>
        <label>Autorizzazioni ENEL prossimità E-Distrib</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQSInadempienze_Gravi_Sospensione_Lavori__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rilevate inadempienze tali da mettere in pericolo immediato l’incolumità dei lavoratori. Pertanto, rilevando la condizione di pericolo grave e imminente, si sospendono le singole lavorazioni fino alla verifica degli avvenuti adeguamenti effettuati.</inlineHelpText>
        <label>Inadempienze Gravi Sospensione Lavori</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_Estintore_con_cartellino_e_revisione__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Estintore con cartellino e revisione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_NoteMateriali__c</fullName>
        <label>Note Materiali</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_NoteOrgCant__c</fullName>
        <description>Note su organizzazione cantiere</description>
        <label>Note organizzazione cantiere</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_Doc__c</fullName>
        <label>Note Documentazione</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_armadi__c</fullName>
        <label>Note armadi</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_infrastr__c</fullName>
        <label>Note infrastrutture</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_muffola_PFP__c</fullName>
        <label>Note muffola PFP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_ripristino_in_corso__c</fullName>
        <label>Note ripristino in corso</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_ripristinodef__c</fullName>
        <label>Note ripristino definitivo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPQ_Note_scavi__c</fullName>
        <label>Note scavi</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPS_NoteDocMin__c</fullName>
        <description>campo note per la documentazione riguardo sicurezza</description>
        <label>Note documentazione minima</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPS_NotePersDiCant__c</fullName>
        <description>Note per personale di cantiere</description>
        <label>Note  personale di cantiere</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPS_NotePresidi__c</fullName>
        <label>Note Presidi</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISPS_noteMezStrutt__c</fullName>
        <label>Note per Mezzi &amp; Strutture</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Accantieramento_conforme__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>L’accantieramento risulta conforme, ordinato e salubre</inlineHelpText>
        <label>Accantieramento conforme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Addetto_Antincendio_presente__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Addetto Antincendio presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Addetto_PS_presente__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Addetto al primo soccorso e antincendio presente</inlineHelpText>
        <label>Addetto Pronto Soccorso presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Attivita_Imprese_autorizzate_OF__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Le attività e le imprese sono state preventivamente autorizzate da O.F.</inlineHelpText>
        <label>Attività e Imprese autorizzate da OF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzato10__c</fullName>
        <label>Autorizzato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzato3__c</fullName>
        <label>Autorizzato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Giunzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giunzione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Infrastrutture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infrastrutture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Posa_cavi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posa Cavi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Ripristini__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ripristini</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Scavo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field has to be checked if the inspected enterprise has been authorized to do groundworks.</description>
        <label>Scavo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_Verticale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verticale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Autorizzazione_amm_competente__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Autorizzazione amministrazione competente</inlineHelpText>
        <label>Autorizzazione amministrazione competent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Buono_stato_cartellonistica__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Buono stato della cartellonistica e dei coni</inlineHelpText>
        <label>Buono stato della cartellonistica e coni</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_DPI_idonei_in_dotazione__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Tutti i lavoratori sono dotati di idonei e integri DPI</inlineHelpText>
        <label>DPI idonei e integri in dotazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_DPI_lavorazioni_in_quota__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>In caso di lavorazioni in quota, sono utilizzati correttamente i DPI di 3°categoria</inlineHelpText>
        <label>DPI di 3°categoria lavorazioni in quota</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_DPI_rischio_elettrico__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>In caso di rischio elettrico, sono utilizzati correttamente i DPI di 3°categoria</inlineHelpText>
        <label>DPI di 3°categoria rischio elettrico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_DURC_regolare__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>DURC regolare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Documentazione_noli_a_freddo__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Eventuali noli a freddo sono corredati da relativa documentazione (contratto e allegati)</inlineHelpText>
        <label>Documentazione eventuali noli a freddo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Documentazione_verifiche_legge__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Presenza della documentazione relativa a controlli/verifiche di legge (libretti d&apos;uso e manutenzione e revisioni dei mezzi)</inlineHelpText>
        <label>Libretti e revisione mezzi regolari</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Dotazione_DPI_3_Cat_eDist__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Qualora necessario i lavoratori sono dotati di DPI di 3° categoria (lavori in tensione, in quota, spazi confinati etc)</inlineHelpText>
        <label>Dotazione DPI 3° Categoria se necessario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Esito_LavorPres__c</fullName>
        <description>Inserire nel Layout di ispezioni, precisamente nella sezione &quot;Dettaglio dei Lavoratori Presenti in Cantiere&quot;.
It has to be insert in Ispezione Layout_2018_01, in &quot;Dettaglio dei Lavoratori Presenti in Cantiere&quot; Section.</description>
        <formula>IF(OR(AND(!ISBLANK(CQS_ISP_Nome_Cognome__c),!ISPICKVAL(Cqs_Isp_Autorizzato__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_Isp_Nome_Cognome2__c),!ISPICKVAL(CQS_Isp_Autorizzato2__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome3__c),!ISPICKVAL(CQS_ISP_Autorizzato3__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome4__c),!ISPICKVAL(CQS_ISP_Autorizzato4__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome5__c),!ISPICKVAL(CQS_ISP_Autorizzato5__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome6__c),!ISPICKVAL(CQS_ISP_Autorizzato6__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome7__c),!ISPICKVAL(CQS_ISP_Autorizzato7__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome8__c),!ISPICKVAL(CQS_ISP_Autorizzato8__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome9__c),!ISPICKVAL(CQS_ISP_Autorizzato9__c, &apos;Sì&apos;)),
AND(!ISBLANK(CQS_ISP_Nome_Cognome10__c),!ISPICKVAL(CQS_ISP_Autorizzato10__c, &apos;Sì&apos;))), &apos;Non Conforme&apos;, &apos;Conforme&apos;)</formula>
        <inlineHelpText>Esito del Dettaglio dei Lavoratori Presenti in Cantiere</inlineHelpText>
        <label>Esito</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Esito_dettLav__c</fullName>
        <description>Inserire nel Layout di ispezioni, precisamente nella sezione &quot;Dettaglio Lavorazioni&quot;
It has to be insert in  Ispezione Layout_2018_01, in &quot;Dettaglio Lavorazioni&quot; Section.</description>
        <formula>IF(OR(AND(CQS_ISP_Autorizzazione_Scavo__c=False,CQS_ISP_Autorizzazione_Scavo__c!=CQS_ISP_Scavo_inEsecuzione__c),AND(CQS_ISP_Autorizzazione_Infrastrutture__c=False,CQS_ISP_Autorizzazione_Infrastrutture__c !=CQS_ISP_Infrastrutture_inEsecuzione__c),AND(CQS_ISP_Autorizzazione_Posa_cavi__c=False,CQS_ISP_Autorizzazione_Posa_cavi__c != CQS_ISP_Posa_Cavi_inEsecuzione__c),AND(CQS_ISP_Autorizzazione_Ripristini__c=False,CQS_ISP_Autorizzazione_Ripristini__c != CQS_ISP_Ripristini_inEsecuzione__c),AND(CQS_ISP_Autorizzazione_Verticale__c=False,CQS_ISP_Autorizzazione_Verticale__c != CQS_ISP_Verticale_inEsecuzione__c),AND(CQS_ISP_Autorizzazione_Giunzione__c=False,CQS_ISP_Autorizzazione_Giunzione__c != CQS_ISP_Giunzione_inEsecuzione__c)),&apos;Non Conforme&apos;,&apos;Conforme&apos;)</formula>
        <inlineHelpText>Esito del Dettaglio delle lavorazioni</inlineHelpText>
        <label>Esito</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Esposizione_Cartello__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Esposizione cartello di cantiere, ordinanza comunale, notifica</inlineHelpText>
        <label>Esposizione Cartello,Ordinanza, Notifica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Giunzione_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giunzione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Idoneit_delimit_Cantiere_AD__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>La delimitazione del cantiere e delle aree di deposito è idonea</inlineHelpText>
        <label>Delimitazione Aree Cantiere</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Infrastrutture_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infrastrutture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_LDO__c</fullName>
        <label>Lettera d&apos;Ordine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Lavorazioni_Autorizzate__c</fullName>
        <defaultValue>&apos;Autorizzate&apos;</defaultValue>
        <label>Lavorazioni</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Lavorazioni_in_esecuzione__c</fullName>
        <defaultValue>&apos;in esecuzione&apos;</defaultValue>
        <label>Lavorazioni</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Marcatura_CE__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Presenza marcatura CE, dichiarazione di conformità delle attrezzature</inlineHelpText>
        <label>Marcatura CE, conformità attrezzatture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Mezzi_Attrezzature_autorizati__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I mezzi e le attrezzature presenti in cantiere sono autorizzati</inlineHelpText>
        <label>Mezzi e attrezzature sono autorizzati</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Nome_Cognome10__c</fullName>
        <label>Nome Cognome</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Nome_Cognome3__c</fullName>
        <label>Nome Cognome</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Notifica_prel_corretta_valida__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Notifica preliminare corretta ed in corso di validità</inlineHelpText>
        <label>Notifica preliminare corretta e valida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Opere_Site_Preparation_POP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Da usare nelle Ispezioni di qualità</description>
        <label>Opere di Site Preparation (POP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Opere_Site_Preparation_inEsec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opere di Site Preparation (POP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_POP__c</fullName>
        <label>POP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_POS__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>POS presenza in cantiere, completezza firme, aggiornamento</inlineHelpText>
        <label>POS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_PSC__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>PSC presenza in cantiere, completezza firme, aggiornamento</inlineHelpText>
        <label>PSC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Passaggi_su_scavi_idonei__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I passaggi sopra scavi sono protetti da idonee piastre metalliche</inlineHelpText>
        <label>Protezione di Minitrincea con piastre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Perc_Tot_Punt__c</fullName>
        <label>Percentuale Totale Punteggio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Posa_Cavi_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posa Cavi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Pozzetti_non_pericolosi__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I pozzetti aperti e/o gli scavi per i pozzetti stessi sono delimitati e non costituiscono pericolo</inlineHelpText>
        <label>Protezione scavi pozzetti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Preposto_Cantiere_Presente__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>E’ presente il preposto di cantiere</inlineHelpText>
        <label>Preposto di Cantiere Presente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Presenti_autorizzati__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I lavoratori presenti in cantiere sono autorizzati ei nominativi risultano nell’elenco personale del POS</inlineHelpText>
        <label>Autorizzati e presenti nel POS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Presenza_Profili_E_Distrib__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Qualora necessario sono presenti i Profili E-Distribuzione</inlineHelpText>
        <label>Presenza Profili E-Distribuzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Presenza_WC__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Presenza di wc chimico o convenzione con esercizi commerciali limitrofi</inlineHelpText>
        <label>Presenza WC chimico o convenzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Presenza_prog_cartografie_enti__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Presenza progetto e cartografie enti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Progetto2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>Progetto_Utente_junction__c</referenceTo>
        <relationshipLabel>Ispezioni</relationshipLabel>
        <relationshipName>Ispezioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Progetto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>CQS_Progetto__c</referenceTo>
        <relationshipLabel>Ispezioni</relationshipLabel>
        <relationshipName>Ispezioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Punteggio_Max_Isp__c</fullName>
        <defaultValue>2.14</defaultValue>
        <label>Punteggio Massimo Ispezione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Punteggio_Totale__c</fullName>
        <label>Punteggio Totale Ispezione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Ripristini_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ripristini</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_RispettoCodice_SegnaleticaStrada__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Rispetto del Nuovo Codice della Strada e della Segnaletica stradale)</inlineHelpText>
        <label>Rispetto Nuovo CDS e Segnaletica Stradal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Scavo_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scavo</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>